[gd_scene load_steps=5 format=3 uid="uid://bac3n7kpsm2n6"]

[ext_resource type="Script" path="res://Scripts/main_menu.gd" id="1_815ye"]
[ext_resource type="Texture2D" uid="uid://bmhqtmg87tsud" path="res://Sprites/Title.png" id="2_iw5un"]
[ext_resource type="Texture2D" uid="uid://b77v8yx62t5e6" path="res://Sprites/Play button.png" id="3_4373t"]
[ext_resource type="Texture2D" uid="uid://dcsfq13q4fkob" path="res://Sprites/Quit button.png" id="4_qg0kj"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_815ye")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.882353, 0.882353, 0.882353, 1)

[node name="Background" type="Sprite2D" parent="."]
scale = Vector2(1, 1)
texture = ExtResource("2_iw5un")
centered = false

[node name="Play" type="Button" parent="."]
layout_mode = 2
offset_left = 140.0
offset_top = 802.0
offset_right = 505.0
offset_bottom = 872.0
text = "Play"

[node name="Quit" type="Button" parent="."]
layout_mode = 2
offset_left = 160.0
offset_top = 943.0
offset_right = 522.0
offset_bottom = 998.0
text = "Quit"

[node name="PlayButton" type="Sprite2D" parent="."]
position = Vector2(326, 842)
texture = ExtResource("3_4373t")

[node name="QuitButton" type="Sprite2D" parent="."]
position = Vector2(338, 966)
texture = ExtResource("4_qg0kj")

[connection signal="mouse_entered" from="Play" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Play" to="." method="_on_button_pressed"]
[connection signal="mouse_entered" from="Quit" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_button_pressed"]
